# ggWorkspace

./: CMakeLists.txt  main.cpp
include/helloworld/: hello.h
src/: hello.cpp  main.cpp
